icons fix, right aligned blocks, added gross

--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:url('fonts/icomoon.eot?9sp127');
-    src:url('fonts/icomoon.eot?9sp127#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9sp127') format('truetype'),
-    url('fonts/icomoon.woff?9sp127') format('woff'),
-    url('fonts/icomoon.svg?9sp127#icomoon') format('svg');
+    src:url('/fonts/icomoon.eot?9sp127');
+    src:url('/fonts/icomoon.eot?9sp127#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?9sp127') format('truetype'),
+    url('/fonts/icomoon.woff?9sp127') format('woff'),
+    url('/fonts/icomoon.svg?9sp127#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
